# the_snake_game

./: .gitignore  README.md  main.py  pyproject.toml  the_snake.py
alembic/: env.py
alembic/versions/: 2755457aa382_fix_defaults.py  9fa6418503a1_add_player_table.py
src/: database.py  game.py  main.py  models.py  settings.py
