[project]
name = "the-snake-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flake8==5.0.4",
    "flake8-docstrings==1.7.0",
    "pep8-naming==0.13.3",
    "pycodestyle==2.9.1",
    "pygame==2.5.2",
    "pytest==7.1.3",
    "pytest-timeout==2.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
