[project]
name = "the-snake-game"
version = "0.1.0"
description = "Snake game with PostgreSQL high scores"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.48,<3.0.0",
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
]
